# LanceDB_NatGeo

./: .gitignore  README.md  insert_mus_into_LanceDB.ipynb  pyproject.toml
backend/: app.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
