[project]
name = "uv-venv-music"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bioacoustics-model-zoo",
    "certifi>=2025.8.3",
    "lancedb>=0.24.1",
    "tensorflow>=2.18.1",
    "tensorflow-hub>=0.16.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]

[tool.uv.sources]
bioacoustics-model-zoo = { git = "https://github.com/kitzeslab/bioacoustics-model-zoo" }
