[project]
name = "uv-venv-music"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bioacoustics-model-zoo",
    "certifi>=2025.8.3",
    "fastapi>=0.116.1",
    "lancedb>=0.24.1",
    "librosa>=0.11.0",
    "numpy>=2.0.2",
    "soundfile>=0.13.1",
    "tensorflow>=2.18.1",
    "tensorflow-hub>=0.16.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]

[tool.uv.sources]
bioacoustics-model-zoo = { git = "https://github.com/kitzeslab/bioacoustics-model-zoo" }
